MODSOURCE-914: remove deprecated method